// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> check how renders should NOT render heading, error and buttons 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: center;
  max-width: 100%;
  text-align: left;
  width: 65rem;
}

<div
    class="c0"
  >
    <form
      action="#"
      class="formik-form"
    >
      <div
        data-testid="Form-children"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`<Form /> check how renders should render everything what is possible with blue submit button 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: center;
  max-width: 100%;
  text-align: left;
  width: 65rem;
}

.c4 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: transparent;
  border: 2px solid #1E8BC3;
  color: #1E8BC3;
}

.c4:hover {
  border-color: #22A7F0;
  color: #22A7F0;
}

.c5 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c5:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c3 {
  display: block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 2.4rem;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
}

.c6 {
  display: inline-block;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
  overflow: visible;
  text-overflow: clip;
  white-space: normal;
  color: #F22613;
  font-size: 1.5rem;
  margin-top: calc(2.4rem + 0rem);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 > *:not(:last-child) {
  margin-right: 2.4rem;
}

.c1 {
  font-size: 2.4rem;
  font-family: Noto Sans,sans-serif;
  line-height: 1;
  margin-bottom: 2.4rem;
  margin-top: 0;
  text-align: left;
}

<div
    class="c0"
  >
    <h3
      class="c1"
    >
      testHeadingText
    </h3>
    <form
      action="#"
      class="formik-form"
    >
      <div
        data-testid="Form-children"
      />
      <div
        class="c2"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <span
          class="c3"
          color=""
          display="block"
          overflow="visible"
          spacing="0px"
          transform=""
        >
          <button
            class="c4"
            color="blue"
            type="button"
          >
            cancel
          </button>
        </span>
        <button
          class="c5"
          color="blue"
          data-testid="Form-submit-btn"
          type="submit"
        >
          submitText
        </button>
      </div>
    </form>
    <span
      class="c6"
      color="#F22613"
      data-testid="Form-error"
      display="inline-block"
      overflow="visible"
      size="3"
      spacing="0px"
      transform=""
    >
      testError
    </span>
  </div>
</DocumentFragment>
`;

exports[`<Form /> check how renders should render red submit button without cancel button 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  justify-self: center;
  max-width: 100%;
  text-align: left;
  width: 65rem;
}

.c2 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #F22613;
  border: 2px solid #F22613;
  color: #fff;
}

.c2:hover {
  background-color: #F94D2A;
  border-color: #F94D2A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 0;
  margin-right: 0;
  margin-bottom: 0;
  margin-left: 0;
  width: 100%;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > *:not(:last-child) {
  margin-right: 2.4rem;
}

<div
    class="c0"
  >
    <form
      action="#"
      class="formik-form"
    >
      <div
        data-testid="Form-children"
      />
      <div
        class="c1"
        direction="row"
        spacing="3"
        width="100%"
        wrap="nowrap"
      >
        <button
          class="c2"
          color="red"
          data-testid="Form-submit-btn"
          type="submit"
        >
          submitText
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
